added discount service and grpc for it, other changes

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,13 @@
 /eShop/Unicorn.eShop.CartService.SDK/obj
 /eShop/Unicorn.eShop.CartService.Tests/obj
 /eShop/Unicorn.eShop.CartService.Tests/bin/Debug/net6.0
+/eShop/discount/Unicorn.eShop.Discount/bin/Debug/net6.0
+/eShop/discount/Unicorn.eShop.Discount/obj
+/eShop/discount/Unicorn.eShop.Discount.SDK/bin/Debug/net6.0
+/eShop/discount/Unicorn.eShop.Discount.SDK/obj
+/eShop/cart/Unicorn.eShop.CartService/bin/Debug/net6.0
+/eShop/cart/Unicorn.eShop.CartService/obj
+/eShop/cart/Unicorn.eShop.CartService.SDK/bin/Debug/net6.0
+/eShop/cart/Unicorn.eShop.CartService.SDK/obj
+/eShop/cart/Unicorn.eShop.CartService.Tests/bin/Debug/net6.0
+/eShop/cart/Unicorn.eShop.CartService.Tests/obj
