--- a/core/development/Unicorn.Core.Development.ServiceHost/appsettings.json
+++ b/core/development/Unicorn.Core.Development.ServiceHost/appsettings.json
@@ -25,5 +25,10 @@
   "ServiceHostConfiguration": {
     "ClientId": "resource_server_1",
     "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
+  },
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
   }
 }
