--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Dockerfile
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Playground.ServiceDiscovery/Playground.ServiceDiscovery.csproj", "Playground.ServiceDiscovery/"]
-RUN dotnet restore "Playground.ServiceDiscovery/Playground.ServiceDiscovery.csproj"
+COPY ["core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Unicorn.Core.Services.ServiceDiscovery.csproj", "core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/"]
+RUN dotnet restore "core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Unicorn.Core.Services.ServiceDiscovery.csproj"
 COPY . .
-WORKDIR "/src/Playground.ServiceDiscovery"
-RUN dotnet build "Playground.ServiceDiscovery.csproj" -c Release -o /app/build
+WORKDIR "/src/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery"
+RUN dotnet build "Unicorn.Core.Services.ServiceDiscovery.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Playground.ServiceDiscovery.csproj" -c Release -o /app/publish
+RUN dotnet publish "Unicorn.Core.Services.ServiceDiscovery.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Playground.ServiceDiscovery.dll"]
+ENTRYPOINT ["dotnet", "Unicorn.Core.Services.ServiceDiscovery.dll"]
