--- a/eShop/cart/Unicorn.eShop.CartService/appsettings.Development.json
+++ b/eShop/cart/Unicorn.eShop.CartService/appsettings.Development.json
@@ -13,23 +13,14 @@
       "Microsoft.AspNetCore": "Trace"
     }
   },
-  "ServiceDiscoveryServiceUrl": "http://localhost:5081",
-  "AuthenticationSettings": {
-    "AuthorityUrl": "https://localhost:44319/",
-    "ClientCredentials": {
-      "ClientId": "console",
-      "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
-      "Scopes": ""
-    }
-  },
-  "ClientHostConfiguration": {
+  "CartHostSettings": {
     "DbConnectionString": "Server=localhost;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;",
     "ServiceDiscoverySettings": {
       "Url": "http://localhost:5081"
     },
     "OneWayCommunicationSettings": {
       "ConnectionString": "amqp://guest:guest@localhost:5672",
-      "SubscriptionId": "9567299c-8a55-4470-afd3-5b27a878ac50"
+      "SubscriptionId": "90b36af1-7727-48a6-a1cc-022d526b09a8"
     },
     "AuthenticationSettings": {
       "AuthorityUrl": "https://localhost:44319/",
@@ -40,5 +31,4 @@
       }
     }
   }
-
 }
