--- a/eShop/discount/Unicorn.eShop.Discount/appsettings.Development.json
+++ b/eShop/discount/Unicorn.eShop.Discount/appsettings.Development.json
@@ -13,14 +13,14 @@
       "Microsoft.AspNetCore": "Trace"
     }
   },
-  "CartHostSettings": {
+  "DiscountHostSettings": {
     "DbConnectionString": "Server=localhost;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;",
     "ServiceDiscoverySettings": {
       "Url": "http://localhost:5081"
     },
     "OneWayCommunicationSettings": {
-      "ConnectionString": "Endpoint=sb://dforge-dev-ds.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=uHfCBc6PouFoD90sylUsWJSttx4Q5gC6iYiXkB/3g9k=",
-      "SubscriptionId": "90b36af1-7727-48a6-a1cc-022d526b09a8"
+      "ConnectionString": "amqp://guest:guest@localhost:5672",
+      "SubscriptionId": "9567299c-8a55-4470-afd3-5b27a878ac50"
     },
     "AuthenticationSettings": {
       "AuthorityUrl": "https://localhost:44319/",
