--- a/eShop/discount/Unicorn.eShop.Discount/appsettings.json
+++ b/eShop/discount/Unicorn.eShop.Discount/appsettings.json
@@ -13,22 +13,13 @@
       "Microsoft.AspNetCore": "Trace"
     }
   },
-  "ServiceDiscoveryServiceUrl": "http://localhost:5081",
-  "AuthenticationSettings": {
-    "AuthorityUrl": "https://localhost:44319/",
-    "ClientCredentials": {
-      "ClientId": "console",
-      "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
-      "Scopes": ""
-    }
-  },
-  "ClientHostConfiguration": {
-    "DbConnectionString": "Server=localhost;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;",
+  "DiscountHostSettings": {
+    "DbConnectionString": "Server=production;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;",
     "ServiceDiscoverySettings": {
       "Url": "http://localhost:5081"
     },
     "OneWayCommunicationSettings": {
-      "ConnectionString": "amqp://guest:guest@localhost:5672",
+      "ConnectionString": "<INSERT AZURE SERVICE BUS CONNECTION STRING HERE>",
       "SubscriptionId": "9567299c-8a55-4470-afd3-5b27a878ac50"
     },
     "AuthenticationSettings": {
@@ -40,5 +31,4 @@
       }
     }
   }
-
 }
