--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DbConnectionString":  "Server=localhost;Database=ServiceDiscoveryDb;User Id=sa;Password=admin1234;"
 }
