--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@
 /eShop/cart/Unicorn.eShop.CartService.SDK/obj
 /eShop/cart/Unicorn.eShop.CartService.Tests/bin/Debug/net6.0
 /eShop/cart/Unicorn.eShop.CartService.Tests/obj
+/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery.DataAccess/bin/Debug/net6.0
+/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery.DataAccess/obj
