--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
     cartdb:
         image: postgres
 
-    unicorn.eshop.cartservice:
-        image: ${DOCKER_REGISTRY-}unicorneshopcartservice
+    servicediscoverydb:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+
+    unicorn.eshop.cart:
+        image: ${DOCKER_REGISTRY-}unicorneshopcart
         build:
             context: .
             dockerfile: eShop/cart/Unicorn.eShop.CartService/Dockerfile
