--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DbConnectionString":  "Server=localhost;Database=ServiceDiscoveryDb;User Id=sa;Password=admin1234;"
+  "ServiceDiscoveryHostSettings": {
+    "DbConnectionString": "Server=127.0.0.1;Database=ServiceDiscoveryDb;User Id=sa;Password=admin1234;",
+    "ServiceDiscoverySettings": {
+      "Url": "http://localhost:5081"
+    },
+    "OneWayCommunicationSettings": {
+      "ConnectionString": "amqp://guest:guest@localhost:5672",
+      "SubscriptionId": "90b36af1-7727-48a6-a1cc-022d526b09a8"
+    },
+    "AuthenticationSettings": {
+      "AuthorityUrl": "https://localhost:44319/",
+      "ClientCredentials": {
+        "ClientId": "console",
+        "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
+        "Scopes": ""
+      }
+    }
+  }
 }
