--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -52,6 +52,7 @@ services:
         container_name: unicorn.core.services.servicediscovery
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
+            - ServiceDiscoveryHostSettings__DbConnectionString=Server=servicediscoverydb;Database=ServiceDiscoveryDb;User Id=sa;Password=admin1234;
         depends_on:
             - servicediscoverydb
         ports:
