added catalog projects, did some refactoring in cart service

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,9 @@
 /eShop/cart/Unicorn.eShop.Cart.Tests/bin/Debug/net6.0
 /eShop/cart/Unicorn.eShop.Cart.Tests/obj
 /obj
+/eShop/cart/tests/Unicorn.eShop.Cart.Tests/bin/Debug/net6.0
+/eShop/cart/tests/Unicorn.eShop.Cart.Tests/obj
+/eShop/cart/Unicorn.eShop.Cart.DataAccess/obj
+/eShop/catalog/Unicorn.eShop.Catalog/obj
+/eShop/catalog/Unicorn.eShop.Catalog.SDK/obj
+/eShop/cart/Unicorn.eShop.Cart.DataAccess/bin/Debug/net6.0
