--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@
 /eShop/catalog/Unicorn.eShop.Catalog/obj
 /eShop/catalog/Unicorn.eShop.Catalog.SDK/obj
 /eShop/cart/Unicorn.eShop.Cart.DataAccess/bin/Debug/net6.0
+/eShop/catalog/Unicorn.eShop.Catalog/bin/Debug/net6.0
