removed reference to ServiceDiscovery service from infrastructure project

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@
 /eShop/catalog/Unicorn.eShop.Catalog.SDK/obj
 /eShop/cart/Unicorn.eShop.Cart.DataAccess/bin/Debug/net6.0
 /eShop/catalog/Unicorn.eShop.Catalog/bin/Debug/net6.0
+/eShop/catalog/Unicorn.eShop.Catalog.SDK/bin/Debug/net6.0
