--- a/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
@@ -7,6 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Include="..\..\services\service-discovery\Unicorn.Core.Services.ServiceDiscovery.SDK\Constants.cs" Link="ServiceRegistration\ServiceDiscovery\SDK\Constants.cs" />
+	  <Compile Include="..\..\services\service-discovery\Unicorn.Core.Services.ServiceDiscovery.SDK\DTOs\GrpcServiceConfiguration.cs" Link="ServiceRegistration\ServiceDiscovery\SDK\DTOs\GrpcServiceConfiguration.cs" />
+	  <Compile Include="..\..\services\service-discovery\Unicorn.Core.Services.ServiceDiscovery.SDK\DTOs\HttpServiceConfiguration.cs" Link="ServiceRegistration\ServiceDiscovery\SDK\DTOs\HttpServiceConfiguration.cs" />
+	  <Compile Include="..\..\services\service-discovery\Unicorn.Core.Services.ServiceDiscovery.SDK\IServiceDiscoveryService.cs" Link="ServiceRegistration\ServiceDiscovery\SDK\IServiceDiscoveryService.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.5.0" />
 		<PackageReference Include="FluentValidation" Version="10.3.6" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.6" />
@@ -20,7 +27,6 @@
 		<PackageReference Include="Castle.Core" Version="4.4.1" />
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
-		<PackageReference Include="Unicorn.Core.Services.ServiceDiscovery.SDK" Version="1.0.0" />
 		<PackageReference Include="RestSharp" Version="107.0.1" />
 		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="6.0.0" />
 		<PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.1.1" />
@@ -44,6 +50,10 @@
 		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Communication.Http.SDK\Unicorn.Core.Infrastructure.Communication.Http.SDK.csproj" />
 		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Communication.MessageBroker\Unicorn.Core.Infrastructure.Communication.MessageBroker.csproj" />
 		<ProjectReference Include="..\Unicorn.Core.Infrastructure.Security.IAM\Unicorn.Core.Infrastructure.Security.IAM.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="ServiceRegistration\ServiceDiscovery\SDK\DTOs\" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
