refactoring, added endpoint for discunt service

--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Unicorn.Core.Services.ServiceDiscovery.csproj
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Unicorn.Core.Services.ServiceDiscovery.csproj
@@ -31,6 +31,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Unicorn.Core.Services.ServiceDiscovery.DataAccess\Unicorn.Core.Services.ServiceDiscovery.DataAccess.csproj" />
+	  <ProjectReference Include="..\Unicorn.Core.Services.ServiceDiscovery.SDK\Unicorn.Core.Services.ServiceDiscovery.SDK.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
