--- a/eShop/cart/Unicorn.eShop.Cart/Unicorn.eShop.Cart.csproj
+++ b/eShop/cart/Unicorn.eShop.Cart/Unicorn.eShop.Cart.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<PackageReference Include="Unicorn.Core.Infrastructure.HostConfiguration.SDK" Version="1.0.0" />
 		<PackageReference Include="OneOf" Version="3.0.205" />
+		<PackageReference Include="Unicorn.eShop.Catalog.SDK" Version="1.0.0" />
 		<PackageReference Include="Unicorn.eShop.Discount.SDK" Version="1.0.0" />
 	</ItemGroup>
 
