--- a/eShop/catalog/Unicorn.eShop.Catalog/Unicorn.eShop.Catalog.csproj
+++ b/eShop/catalog/Unicorn.eShop.Catalog/Unicorn.eShop.Catalog.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,6 +12,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Unicorn.Core.Infrastructure.HostConfiguration.SDK" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Unicorn.eShop.Catalog.SDK\Unicorn.eShop.Catalog.SDK.csproj" />
   </ItemGroup>
 
 </Project>
