initial commit of new catalog service endpoint for catalog management

--- a/eShop/catalog/Unicorn.eShop.Catalog.SDK/Unicorn.eShop.Catalog.SDK.csproj
+++ b/eShop/catalog/Unicorn.eShop.Catalog.SDK/Unicorn.eShop.Catalog.SDK.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,10 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="Unicorn.Core.Infrastructure.Communication.Http.SDK" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DTOs\" />
   </ItemGroup>
 
 </Project>
