--- a/eShop/discount/Unicorn.eShop.Discount.SDK/Unicorn.eShop.Discount.SDK.csproj
+++ b/eShop/discount/Unicorn.eShop.Discount.SDK/Unicorn.eShop.Discount.SDK.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Services\gRPC\Protos\" />
+	  <None Remove="Services\gRPC\Protos\DiscountGrpcService.proto" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -22,13 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\Unicorn.eShop.Discount\gRPC\Protos\DiscountGrpcService.proto" Link="Services\gRPC\Protos\DiscountGrpcService.proto" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Protobuf Include="..\Unicorn.eShop.Discount\gRPC\Protos\DiscountGrpcService.proto">
-			<Link>Services\gRPC\Protos\DiscountGrpcService.proto</Link>
-		</Protobuf>
+	  <Protobuf Include="Services\gRPC\Protos\DiscountGrpcService.proto" GrpcServices="Server, Client" />
 	</ItemGroup>
 
 </Project>
