--- a/eShop/discount/Unicorn.eShop.Discount.SDK/Unicorn.eShop.Discount.SDK.csproj
+++ b/eShop/discount/Unicorn.eShop.Discount.SDK/Unicorn.eShop.Discount.SDK.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="Services\gRPC\Protos\DiscountGrpcService.proto" />
+		<None Remove="Services\gRPC\Protos\DiscountGrpcService.proto" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -22,7 +22,25 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Protobuf Include="Services\gRPC\Protos\DiscountGrpcService.proto" GrpcServices="Server, Client" />
+		<Protobuf Include="Services\gRPC\Protos\DiscountGrpcService.proto" GrpcServices="Server, Client" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.33.0.40503">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\..\Unicorn-platform-microservices.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\..\Unicorn-platform-microservices.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
 
 </Project>
