--- a/eShop/cart/Unicorn.eShop.Cart/Unicorn.eShop.Cart.csproj
+++ b/eShop/cart/Unicorn.eShop.Cart/Unicorn.eShop.Cart.csproj
@@ -24,4 +24,22 @@
 	  <ProjectReference Include="..\Unicorn.eShop.Cart.SDK\Unicorn.eShop.Cart.SDK.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.33.0.40503">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\..\Unicorn-platform-microservices.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\..\Unicorn-platform-microservices.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	
 </Project>
