changed route paths for cart service

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@
 /eShop/catalog/Unicorn.eShop.Catalog.SDK/bin/Debug/net6.0
 /core/services/api-gateway/Unicorn.Core.Services.ApiGateway.Ocelot/obj
 /core/services/api-gateway/Unicorn.Core.Services.ApiGateway.Ocelot/bin/Debug/net6.0
+/.idea/.idea.Unicorn-platform-microservices/.idea
