--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,8 @@
 /core/services/api-gateway/Unicorn.Core.Services.ApiGateway.Ocelot/obj
 /core/services/api-gateway/Unicorn.Core.Services.ApiGateway.Ocelot/bin/Debug/net6.0
 /.idea/.idea.Unicorn-platform-microservices/.idea
+/templates/service/Unicorn.Templates.Service.Host/obj
+/templates/service/Unicorn.Templates.Service.SDK/obj
+/templates/service/Unicorn.Templates.Service.Host/bin/Debug/net6.0
+/templates/service/Unicorn.Templates.Service.SDK/bin/Debug/net6.0
+/templates/service/.template.config/template.json.bak
