further implementation of Unicorn microservice template

--- a/templates/service/Unicorn.Templates.Service.Host/appsettings.Development.json
+++ b/templates/service/Unicorn.Templates.Service.Host/appsettings.Development.json
@@ -4,5 +4,24 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "YOUR_SERVICE_NAMEHostSettings": {
+    "DbConnectionString": "ENTER DATABASE CONNECTION STRING",
+    "ServiceDiscoverySettings": {
+      "Url": "http://localhost:5081"
+    },
+    "OneWayCommunicationSettings": {
+      "ConnectionString": "amqp://guest:guest@localhost:5672",
+      "SubscriptionId": "ENTER RANDOM GUID"
+    },
+    "AuthenticationSettings": {
+      "AuthorityUrl": "https://localhost:44319/",
+      "ClientCredentials": {
+        "ClientId": "ENTER CLIENTID",
+        "ClientSecret": "ENTER CLIENT SECRET",
+        "Scopes": "ENTER SCOPES IF NEEDED OR LEAVE EMPTY STRING"
+      }
+    }
   }
 }
