--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,4 @@
 /templates/service/Unicorn.Templates.Service.Host/bin/Debug/net6.0
 /templates/service/Unicorn.Templates.Service.SDK/bin/Debug/net6.0
 /templates/service/.template.config/template.json.bak
+/templates/service/.template.config/ide.host.json.bak
