--- a/templates/service/Unicorn.Templates.Service.Host/Unicorn.Templates.Service.csproj
+++ b/templates/service/Unicorn.Templates.Service.Host/Unicorn.Templates.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,6 +12,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Unicorn.Core.Infrastructure.HostConfiguration.SDK" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\gRPC\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Unicorn.Templates.Service.SDK\Unicorn.Templates.Service.SDK.csproj" />
   </ItemGroup>
 
 </Project>
