--- a/templates/service/Unicorn.Templates.Service.Host/appsettings.json
+++ b/templates/service/Unicorn.Templates.Service.Host/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "YOUR_SERVICE_NAMEHostSettings": {
+    "DbConnectionString": "Server=localhost;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;",
+    "ServiceDiscoverySettings": {
+      "Url": "http://localhost:5081"
+    },
+    "OneWayCommunicationSettings": {
+      "ConnectionString": "amqp://guest:guest@localhost:5672",
+      "SubscriptionId": "90b36af1-7727-48a6-a1cc-022d526b09a8"
+    },
+    "AuthenticationSettings": {
+      "AuthorityUrl": "https://localhost:44319/",
+      "ClientCredentials": {
+        "ClientId": "console",
+        "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
+        "Scopes": ""
+      }
+    }
+  }
 }
