--- a/templates/service/Unicorn.Templates.Service.SDK/Unicorn.Templates.Service.SDK.csproj
+++ b/templates/service/Unicorn.Templates.Service.SDK/Unicorn.Templates.Service.SDK.csproj
@@ -1,9 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Grpc.Tools" Version="2.43.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Unicorn.Core.Infrastructure.Communication.Grpc.SDK" Version="1.0.0" />
+		<PackageReference Include="Unicorn.Core.Infrastructure.Communication.Http.SDK" Version="1.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Remove="Services\gRPC\Protos\Custom\Types.proto" />
+		<None Remove="Services\gRPC\Protos\YOUR_SERVICE_NAMEGrpcService.proto" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="Services\gRPC\Protos\Custom\Types.proto" GrpcServices="Server, Client" />
+		<Protobuf Include="Services\gRPC\Protos\YOUR_SERVICE_NAMEGrpcService.proto" GrpcServices="Server, Client" />
+	</ItemGroup>
 
 </Project>
