--- a/templates/service/Unicorn.Templates.Service.Host/Unicorn.Templates.Service.csproj
+++ b/templates/service/Unicorn.Templates.Service.Host/Unicorn.Templates.Service.csproj
@@ -10,13 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Grpc.Tools" Version="2.43.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>  
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Unicorn.Core.Infrastructure.HostConfiguration.SDK" Version="1.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\gRPC\" />
   </ItemGroup>
 
   <ItemGroup>
