made changes to project template

--- a/templates/service/Unicorn.Templates.Service/Dockerfile
+++ b/templates/service/Unicorn.Templates.Service/Dockerfile
@@ -7,16 +7,17 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["project-templates/Unicorn.Templates.Service.Host/Unicorn.Templates.Service.Host.csproj", "project-templates/Unicorn.Templates.Service.Host/"]
-RUN dotnet restore "project-templates/Unicorn.Templates.Service.Host/Unicorn.Templates.Service.Host.csproj"
+COPY ["templates/service/Unicorn.Templates.Service/Unicorn.Templates.Service.csproj", "templates/service/Unicorn.Templates.Service/"]
+COPY ["templates/service/Unicorn.Templates.Service.SDK/Unicorn.Templates.Service.SDK.csproj", "templates/service/Unicorn.Templates.Service.SDK/"]
+RUN dotnet restore "templates/service/Unicorn.Templates.Service/Unicorn.Templates.Service.csproj"
 COPY . .
-WORKDIR "/src/project-templates/Unicorn.Templates.Service.Host"
-RUN dotnet build "Unicorn.Templates.Service.Host.csproj" -c Release -o /app/build
+WORKDIR "/src/templates/service/Unicorn.Templates.Service"
+RUN dotnet build "Unicorn.Templates.Service.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Unicorn.Templates.Service.Host.csproj" -c Release -o /app/publish
+RUN dotnet publish "Unicorn.Templates.Service.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Unicorn.Templates.Service.Host.dll"]
+ENTRYPOINT ["dotnet", "Unicorn.Templates.Service.dll"]
