--- a/templates/service/Unicorn.Templates.Service/Unicorn.Templates.Service.csproj
+++ b/templates/service/Unicorn.Templates.Service/Unicorn.Templates.Service.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c6561cac-e421-447c-878e-782c88e5a9ec</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
